--- a/angular/src/app/pages/user/edit-user/edit-user.component.html
+++ b/angular/src/app/pages/user/edit-user/edit-user.component.html
@@ -9,7 +9,7 @@
         <mat-grid-tile>
           <div class='controls-container'>
             <mat-form-field [ngClass]="{'error': editUserForm.controls['username'].errors && editUserForm.controls['username'].dirty}">
-              <input matInput type='text' formControlName='username' placeholder='E-Mail' required>
+              <input matInput type='text' formControlName='username' placeholder='E-Mail' required readonly>
               <div *ngIf="editUserForm.controls['username'].invalid && (editUserForm.controls['username'].dirty || editUserForm.controls['username'].touched)" class='error-msg'>
                 <div *ngIf="editUserForm.controls['username'].errors.required">Username is required.</div>
                 <div *ngIf="editUserForm.controls['username'].errors.minlength">Username must be at least 2 characters long.</div>
@@ -38,15 +38,17 @@
               <mat-checkbox class='example-margin' formControlName='showpassword' (click)='hideShowPassword()'>Show password</mat-checkbox>
               <input matInput type={{inputType}} formControlName='password' placeholder='Password' required>
             </mat-form-field>
+
+            <label>Gender</label>
             <div class='add-bottom-padding'>
             <!-- <div> -->
-              <mat-radio-group formControlName='gender'>
-                <mat-radio-button value='MALE'>Male</mat-radio-button>
-                <mat-radio-button value='FEMALE'>Female</mat-radio-button>
-                <mat-radio-button value='OTHER'>Other</mat-radio-button>
+              <label>Gender: </label>
+              <mat-radio-group align='left' formControlName='gender'>
+                <mat-radio-button *ngFor="let gender of genders" [value]='gender.value'>
+                  {{gender.type}}
+                </mat-radio-button>
               </mat-radio-group>
             </div>
-
             <mat-form-field>
               <input formControlName='dateOfBirth' matInput [matDatepicker]='myDatepicker' placeholder='Date of Birth'>
               <mat-datepicker-toggle matSuffix [for]='myDatepicker'></mat-datepicker-toggle>
