--- a/angular/src/app/pages/security/login/login.component.html
+++ b/angular/src/app/pages/security/login/login.component.html
@@ -1,13 +1,12 @@
-<mat-card *ngIf='errorMsg'>
-  <mat-card-content align='center'>
-    <div *ngIf='errorMsg' [ngClass]="{'error': errorMsg}">
-      {{errorMsg}}
-    </div>
-  </mat-card-content>
-</mat-card>  
-
 <mat-card>
   <mat-card-title align='center'>
+
+    <mat-card *ngIf='errorMsg'>
+        <mat-card-content align='center'>
+            <div *ngIf='errorMsg' [ngClass]="{'error': errorMsg}">{{errorMsg}}</div>
+        </mat-card-content>
+    </mat-card>
+
     Login
     <mat-divider></mat-divider>
     <div class='hint-msg'>Hint : userone@gmail.com - password</div>
