--- a/angular/src/app/pages/security/registration/registration.component.html
+++ b/angular/src/app/pages/security/registration/registration.component.html
@@ -1,13 +1,20 @@
-<mat-card *ngIf='errorMsg'>
+<!-- <mat-card *ngIf='errorMsg'>
   <mat-card-content align='center'>
     <div *ngIf='errorMsg' [ngClass]="{'error': errorMsg}">
       {{errorMsg}}
     </div>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
 
 <mat-card>
     <mat-card-title align='center'>
+
+      <mat-card *ngIf='errorMsg'>
+          <mat-card-content align='center'>
+              <div *ngIf='errorMsg' [ngClass]="{'error': errorMsg}">{{errorMsg}}</div>
+          </mat-card-content>
+      </mat-card>
+
       Registration Form
       <mat-divider></mat-divider>
     </mat-card-title>
@@ -53,19 +60,19 @@
                   <div *ngIf="registrationForm.controls['password'].errors.maxlength">Password must be at most 10 characters long.</div>
                 </div>
               </mat-form-field>
-              <!-- <mat-form-field>
-                <mat-checkbox class='example-margin' formControlName='showpassword' (click)='hideShowPassword()'>Show password</mat-checkbox>
-                <input matInput type={{inputType}} formControlName='password' placeholder='Password' required>
-              </mat-form-field> -->
               <div class='add-bottom-padding'>
+                <label mat-subheader>Gender: </label>
                 <mat-radio-group formControlName='gender'>
-                  <mat-radio-button value='MALE'>Male</mat-radio-button>
+                  <mat-radio-button *ngFor="let gender of genders" [value]='gender.value'>
+                    {{gender.type}}
+                  </mat-radio-button>
+                  <!-- <mat-radio-button value='MALE'>Male</mat-radio-button>
                   <mat-radio-button value='FEMALE'>Female</mat-radio-button>
-                  <mat-radio-button value='OTHER'>Other</mat-radio-button>
+                  <mat-radio-button value='OTHER'>Other</mat-radio-button> -->
                 </mat-radio-group>
               </div>            
               <mat-form-field>
-                <input formControlName='dob' matInput [matDatepicker]='picker' placeholder='Date of Birth'>
+                <input formControlName='dateOfBirth' matInput [matDatepicker]='picker' placeholder='Date of Birth'>
                 <mat-datepicker-toggle matSuffix [for]='picker'></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
               </mat-form-field>
