--- a/angular/src/themes.scss
+++ b/angular/src/themes.scss
@@ -2,8 +2,8 @@
 @include mat-core();
 
 $my-app-primary: mat-palette($mat-indigo);
-$my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
-$my-app-warn:    mat-palette($mat-deep-orange);
+$my-app-accent:  mat-palette($mat-deep-purple, 500, 900, A100);
+$my-app-warn:    mat-palette($mat-pink);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
@@ -11,9 +11,10 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 .alternate-theme {
   $alternate-primary: mat-palette($mat-blue);
-  $alternate-accent:  mat-palette($mat-pink, 400);
+  $alternate-accent:  mat-palette($mat-cyan, 400);
+  $alternate-warn:  mat-palette($mat-grey, 400);
 
-  $alternate-theme: mat-light-theme($alternate-primary, $alternate-accent);
+  $alternate-theme: mat-light-theme($alternate-primary, $alternate-accent, $alternate-warn);
 
   @include angular-material-theme($alternate-theme);
 }
